Controller de navigation et controller de session
Ajout du controller de navigation (pour changer l'apparence du bouton de
navigation quand on clique dessus)
Ajout du controller de session (vide pour l'instant)

--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -1,8 +1,8 @@
-<section class="panel panel-padding">
-<center><button ng-click="test()">Acquisition</button></center>
-<ul>
-	<li ng-repeat="ligne in liste">
-		{{ligne.test}}
-	</li>
-</ul>
+<section class="panel panel-padding" ng-controller="SessionController">
+	<center><button ng-click="test()">Acquisition</button></center>
+	<ul>
+		<li ng-repeat="ligne in liste">
+			{{ligne.test}}
+		</li>
+	</ul>
 </section>
