Début de la géolocalisation
Ajout du module Geolocation de Cordova + utilisation basique

--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -1,5 +1,5 @@
 <section class="panel panel-padding" ng-controller="SessionController">
-	<center><button ng-click="test()">Acquisition</button></center>
+	<center><button ng-click="acquisition()">Acquisition</button></center>
 	<ul>
 		<li ng-repeat="ligne in liste">
 			{{ligne.test}}
