--- a/Runbelievable/platforms/android/assets/www/partials/home.html
+++ b/Runbelievable/platforms/android/assets/www/partials/home.html
@@ -1,8 +1,21 @@
-<section class="panel panel-padding">
-<center><button ng-click="test()">Acquisition</button></center>
-<ul>
-	<li ng-repeat="ligne in liste">
-		{{ligne.test}}
-	</li>
-</ul>
+<section class="panel panel-padding" ng-controller="SessionController">
+	<center><button ng-click="acquisition()">Acquisition</button></center>
+	<ul>
+		<li ng-repeat="ligne in liste">
+			{{ligne.test}}
+		</li>
+	</ul>
+
+	<TABLE BORDER="1"> 
+	 	<TR> 
+		 	<TH> Latitude</TH> 
+		 	<TD> {{geolocation[0].latitude}} </TD>
+	  	</TR> 
+	</TABLE> 
+	{{geolocation[0]}}
+
+	</br>
+	Erreur : code {{error[0].code}} - {{error[0].message}}
+	</br>
+	{{error[0]}}
 </section>
