--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -13,6 +13,7 @@
             </tr>
         </thead>
         <tbody >
+            <!-- Parcourt de la liste des coordonées GPS -->
             <tr ng-repeat="item in listeAcquisitions">
                 <td>
                 {{item.latitude}}
