Finalisation du controlerSession
Tout ce qui concerne une session se trouve dans le controler, le GPS est
donc indépendant de la vue et pourra ainsi être réutiliser.
Ajout de la possibilité de relancer l'acquisition.

--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -1,5 +1,5 @@
 <section class="panel panel-padding" ng-controller="SessionController">
-    <center><a id="debut_geo" class="btn btn-primary btn-sm">Acquisition</a></center><br/>
+    <center><a id="debut_geo" class="btn btn-primary btn-sm">Débuter l'acquisition</a></center><br/>
     
     <div class="alert">
         
