--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -1,26 +1,23 @@
 <section class="panel panel-padding" ng-controller="SessionController">
-    <center><a id="debut_geo" class="btn btn-primary btn-sm" ng-show="gps.gps_actif">{{texte_bouton_acquisition}}</a></center><br/>
-    
-    <table id="geolocalisation" class="table table-striped"> 
-        <thead>
-            <tr> 
-                <th>Latitude</th> 
-                <th>Longitude</th>
-            </tr>
-        </thead>
-        <tbody >
-            <!-- Parcourt de la liste des coordonées GPS -->
-            <tr ng-repeat="item in listeAcquisitions">
-                <td>
-                {{item.latitude}}
-                </td>
-                <td>
-                {{item.longitude}}
-                </td>
-            <tr>
-        </tbody>
-    </table>
+	<center>
+		<a class="btn btn-primary btn-sm" ng-click="clickAcquisition()" ng-show="true">{{texte_bouton_acquisition}}</a>
+	</center>
+	<br/>
+
+	<table id="geolocalisation" class="table table-striped">
+		<thead>
+			<tr>
+				<th>Latitude</th>
+				<th>Longitude</th>
+			</tr>
+		</thead>
+		<tbody >
+			<!-- Parcourt de la liste des coordonées GPS -->
+			<tr ng-repeat="item in listeAcquisitions">
+				<td> {{item.latitude}} </td>
+				<td> {{item.longitude}} </td>
+			<tr>
+		</tbody>
+	</table>
 </section>
-<script>
-    
-</script>
+<script></script>
