Création de l'objet session
Création de l'objet session et mise à jour du code sur la liste
d'acquisition, qui dorénavant se trouve dans l'objet session.

--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -13,7 +13,7 @@
 		</thead>
 		<tbody >
 			<!-- Parcourt de la liste des coordonées GPS -->
-			<tr ng-repeat="item in listeAcquisitions">
+			<tr ng-repeat="item in session.listeAcquisitions">
 				<td> {{item.latitude}} </td>
 				<td> {{item.longitude}} </td>
 			<tr>
