Début de l'ajout des stats d'une session
Ajout d'un nouveau partials et d'un controller pour la page des
statistiques d'une session. Ajout du routing vers cette page et d'un
bouton moche sur la page home pour y acceder.

#20

--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -1,6 +1,7 @@
 <section class="panel panel-padding" ng-controller="SessionController">
 	<center>
-		<a class="btn btn-primary btn-sm" ng-click="clickAcquisition()" ng-show="true">{{texte_bouton_acquisition}}</a>
+		<a class="btn btn-primary btn-sm" ng-click="clickAcquisition()" ng-show="true">{{texte_bouton_acquisition}}</a></br></br>
+		<a href="#statistiquesSession" class="btn btn-primary btn-sm" ng-click="menu = 'statistiquesSession'" ng-show="true">Statistiques de la session</a>
 	</center>
 	<br/>
 
