#16 Ajout d'une map google maps (api JS) avec localisation de la position avec le charmant bouton, recentrage de la map si la position change (sur appui du bouton)

--- a/Runbelievable/www/css/style.css
+++ b/Runbelievable/www/css/style.css
@@ -79,3 +79,15 @@
     border-radius: 0px;
     width: 100%;
 }
+
+/*----------------------------------*\
+    Module Google Map
+\*----------------------------------*/
+html, body, #map
+    {
+        height: 80%;
+    }
+    #map
+    {
+        width: 100%;
+    }
