Ajout de la durée d'une session et de la distance parcourue
#20 #6

--- a/Runbelievable/www/partials/statistiquesSession.html
+++ b/Runbelievable/www/partials/statistiquesSession.html
@@ -1,7 +1,13 @@
 <section class="panel panel-padding" ng-controller="StatistiquesSessionController">
-	<center>COUCOU</center>
-	<a class="btn btn-primary btn-sm" ng-click="lissageSession()">Calculer</a>
 	
+	<center><a class="btn btn-primary btn-sm" ng-click="lissageSession()">Calculer les stats</a></center>
+	
+	</br></br></br></br>
+	
+	<center>Distance totale : {{session.distanceParcouru}} km</center></br>
+	<center>Durée de la session : {{session.dureeSession}} secondes</center>
+	
+	<!--
 	<table id="distances" class="table table-striped" ng-show="true">
         <thead>
             <tr>
@@ -9,10 +15,10 @@
             </tr>
         </thead>
         <tbody >
-            <!-- Parcourt de la liste des distances effectuées -->
             <tr ng-repeat="item in session.listeDistances">
                 <td> {{item}} </td>
             <tr>
         </tbody>
     </table>
+    -->
 </section>
