--- a/Runbelievable/www/css/style.css
+++ b/Runbelievable/www/css/style.css
@@ -91,3 +91,13 @@ html, body, #map
     {
         width: 100%;
     }
+
+/*----------------------------------*\
+    Graphique de statistiques
+\*----------------------------------*/
+.chartWrapper {
+  margin: 15px auto;
+  width: 500px;
+  height: 200px;
+  text-align: center;
+}
