--- a/Runbelievable/www/partials/statistiquesSession.html
+++ b/Runbelievable/www/partials/statistiquesSession.html
@@ -5,13 +5,14 @@
 	</br></br>
 	
 	<center><b>Distance totale</b> : {{session.distanceParcouru}} km</center></br>
-	<center><b>Durée de la session</b> : {{session.dureeSession}} secondes</center>
+	<center><b>Durée de la session</b> : {{session.dureeSession}} secondes</center></br>
 	
 	
 	<!-- Div contenant le graphique -->
-	<div id="simpleExample" class="chartWrapper"></div>
+	<center><b>Vitesse au cours du temps : </b></center>
+	<div align="center" id="VitesseTemps" class="chartWrapper"></div>
 	
-	
+	<!--
 	<table id="test" class="table table-striped" ng-show="true">
         <thead>
             <tr>
@@ -25,6 +26,6 @@
                <td> {{item.vitesseMoyenne}} km/h</td>
             <tr>
         </tbody>
-    </table>
+    </table>-->
     
 </section>
