Ajout des vitesse moyenne/min/Max
#20 #6

--- a/Runbelievable/www/css/style.css
+++ b/Runbelievable/www/css/style.css
@@ -96,8 +96,8 @@ html, body, #map
     Graphique de statistiques
 \*----------------------------------*/
 .chartWrapper {
-	width:280px;
-	height: 230px;
+	/*width:280px;
+	height: 230px;*/
   	margin: 15px auto 10px;
   	text-align: center;
 }
