--- a/Runbelievable/www/partials/statistiquesSession.html
+++ b/Runbelievable/www/partials/statistiquesSession.html
@@ -1,17 +1,19 @@
 <section class="panel panel-padding" ng-controller="StatistiquesSessionController">
 	
-	<center><a class="btn btn-primary btn-sm" ng-click="lissageSession()">Calculer les stats</a></center>
+	<!--<center><a class="btn btn-primary btn-sm" ng-click="lissageSession()">Calculer les stats</a></center>-->
+	<h3 align="center">Statistiques de votre session</h3>
 	
-	</br></br>
-	
-	<center><b>Distance totale</b> : {{session.distanceParcouru}} km</center></br>
-	<center><b>Durée de la session</b> : {{session.dureeSession}} secondes</center></br>
+	<br>
+	<b>Distance totale</b> : {{session.distanceParcouru}} km<br>
+	<b>Durée de la session</b> : {{session.dureeSession}} secondes<br>
+	<b>Vitesse moyenne</b> : {{session.vitesseMoyenne}} km/h<br>
+	<b>Vitesse minimale</b> : {{session.vitesseMin}} km/h<br>
+	<b>Vitesse maximale</b> : {{session.vitesseMax}} km/h<br><br>
 	
 	
 	<!-- Div contenant le graphique -->
 	<center><b>Vitesse au cours du temps : </b></center>
 	<div align="center" id="VitesseTemps" class="chartWrapper"></div>
-	
 	<!--
 	<table id="test" class="table table-striped" ng-show="true">
         <thead>
@@ -27,5 +29,4 @@
             <tr>
         </tbody>
     </table>-->
-    
 </section>
