--- a/Runbelievable/www/partials/statistiquesSession.html
+++ b/Runbelievable/www/partials/statistiquesSession.html
@@ -13,6 +13,10 @@
     <!-- Div contenant le graphique -->
     <center><b>Vitesse au cours du temps : </b></center>
     <div align="center" id="VitesseTemps" class="chartWrapper"></div>
+    
+	<input type="text" class="form-control" id="nomSession" placeholder="Nom de la session ..." ng-model="session.nom"></br>
+	<a class="btn btn-primary btn-sm" ng-click="sauvegarderSession()" ng-show="true">Sauvegarder la session</a>
+	
     <!--
     <table id="test" class="table table-striped" ng-show="true">
     <thead>
