--- a/Runbelievable/www/css/style.css
+++ b/Runbelievable/www/css/style.css
@@ -13,6 +13,34 @@
     padding: 0px 20px;
 }
 
+#connexion_profil {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: rgba(22, 22, 22, .95);
+    z-index: 10;
+    right: 0px;
+    bottom: 0px;
+    color: white;
+    text-align: center;
+    display: none;
+}
+
+#connexion_profil input {
+    width: 90%;
+    margin: 10px auto;
+}
+
+#connexion_profil .close {
+    margin: 5px;
+    color: white;
+    opacity: 0.5;
+}
+
+#connexion_profil .close:hover {
+    opacity: 0.9;
+}
+
 #icone_gps {
     position: absolute;
     top: 0px;
@@ -84,20 +112,20 @@
     Module Google Map
 \*----------------------------------*/
 html, body, #map
-    {
-        height: 90%;
-    }
-    #map
-    {
-        width: 100%;
-    }
+{
+    height: 90%;
+}
+#map
+{
+    width: 100%;
+}
 
 /*----------------------------------*\
     Graphique de statistiques
 \*----------------------------------*/
 .chartWrapper {
-	/*width:280px;
-	height: 230px;*/
-  	margin: 15px auto 10px;
-  	text-align: center;
+    /*width:280px;
+    height: 230px;*/
+    margin: 15px auto 10px;
+    text-align: center;
 }
