Nouvelle architecture pour plus de facilités de maintenance. Nouvelle présentation, introduction des boutons pour les menus et pour les réglages. Utilisation de Sass pour les styles.

--- a/Runbelievable/www/partials/home.html
+++ b/Runbelievable/www/partials/home.html
@@ -1,4 +1,4 @@
-<section class="panel panel-padding" ng-controller="SessionController">
+<section ng-controller="SessionController">
     <center>
         <a class="btn btn-primary btn-sm" ng-click="clickAcquisition()" ng-show="gps_actif">{{texte_bouton_acquisition}}</a>
         <a href="#statistiquesSession" class="btn btn-primary btn-sm" ng-click="menu = 'statistiquesSession'" ng-show="true">Statistiques</a>
