--- a/Runbelievable/www/scss/style2.scss
+++ b/Runbelievable/www/scss/style2.scss
@@ -1,4 +1,6 @@
 
+$largeurMenu: 270px;
+
 body {
     font-family: 'Open Sans', sans-serif !important;
     color: #666;
@@ -18,13 +20,13 @@ body {
     height: 49px;
     width: 100%;
     position: fixed;
-    top: 0px; left: 0px; right: 0px;
+    top: 0px;
     z-index: 50;
     text-align: center;
     color: white;
     border-bottom: 1px solid black;
-    -webkit-transition: left 300ms linear 0s; /* For Safari 3.1 to 6.0 */
-    transition: left 300ms linear 0s;
+    -webkit-transition: anything 300ms linear 0s; /* For Safari 3.1 to 6.0 */
+    transition: anything 300ms linear 0s;
     .sidebar {
         float: left;
         height: 49px;
@@ -90,88 +92,111 @@ body {
     }
 }
 
-#menuG {
+#menuG, #menuD {
     background-image: url(../img/menu-bg.png);
     background-repeat: repeat;
     background-size: 75px 75px;
-    width: 270px;
+    width: $largeurMenu;
     display: block;
     position: absolute;
     z-index: 50;
     top: 0px;
-    left: -270px;
     bottom: 0px;
     color: #ccc;
     overflow: hidden;
     position: fixed;
-    -webkit-transition: left 300ms linear 0s; /* For Safari 3.1 to 6.0 */
-    transition: left 300ms linear 0s;
-    .button {
-        text-align: center;
-        height: 49px;
-        color: #ccc;
-        font-size: 18px;
-        width: 49px;
-        line-height: 49px;
-    }
-    .button:hover {
-        background: rgba(255, 255, 255, 0.1);
-    }
-    .logo {
-        margin-top: 60px;
-        padding: 30px;
-        padding-left: 110px;
-        color: #ccc;
-        font-size: 18px;
-        position: relative;
-        height: 120px;
-        .photo {
-            position: absolute;
-            width: 80px;
-            height: 80px;
-            top: 20px;
-            left: 10px;
-            background: #666;
-            border-radius: 50%;
+    .scroll {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 100%;
+        width: 287px;
+        .button {
             text-align: center;
-            line-height: 80px;
-            font-size: 30px;
-        }
-        .nom:first-letter {
-            text-transform: uppercase;
-        }
-        .categorie {
-            font-size: 13px;
-            color: #888;
-        }
-    }
-    .title {
-        text-transform: uppercase;
-        background: #1a1a1a;
-        border-top: 1px black solid;
-        border-bottom: 1px black solid;
-        font-size: 15px;
-        padding: 10px;
-        padding-left: 20px;
-    }
-    .liens {
-        a {
-            padding: 15px;
-            font-size: 13px;
-            padding-left: 70px;
+            height: 49px;
             color: #ccc;
-            width: 100%;
-            display: block;
-            position: relative;
-            i {
-                position: absolute;
-                left: 20px;
-                font-size: 20px;
-                top: 15px;
-            }
+            font-size: 18px;
+            width: 49px;
+            line-height: 49px;
         }
-        a:hover {
+        .button:hover {
             background: rgba(255, 255, 255, 0.1);
         }
+        .logo {
+            margin-top: 60px;
+            padding: 30px;
+            padding-left: 110px;
+            color: #ccc;
+            font-size: 18px;
+            position: relative;
+            height: 120px;
+            .photo {
+                position: absolute;
+                width: 80px;
+                height: 80px;
+                top: 20px;
+                left: 10px;
+                background: #666;
+                border-radius: 50%;
+                text-align: center;
+                line-height: 80px;
+                font-size: 30px;
+            }
+            .nom:first-letter {
+                text-transform: uppercase;
+            }
+            .categorie {
+                font-size: 13px;
+                color: #888;
+            }
+        }
+        .title {
+            text-transform: uppercase;
+            background: #1a1a1a;
+            border-top: 1px black solid;
+            border-bottom: 1px black solid;
+            font-size: 15px;
+            padding: 10px;
+            padding-left: 20px;
+        }
+        .liens {
+            a, .infos {
+                padding: 15px;
+                font-size: 13px;
+                padding-left: 70px;
+                color: #ccc;
+                width: 100%;
+                display: block;
+                position: relative;
+                i {
+                    position: absolute;
+                    left: 20px;
+                    font-size: 20px;
+                    top: 15px;
+                }
+            }
+            a:hover {
+                background: rgba(255, 255, 255, 0.1);
+            }
+        }
     }
+}
+
+.moveLeft {
+    right: $largeurMenu;
+}
+
+.moveRight {
+    left: $largeurMenu;
+}
+
+#menuG {
+    left: -$largeurMenu;
+    -webkit-transition: left 300ms linear 0s; /* For Safari 3.1 to 6.0 */
+    transition: left 300ms linear 0s;
+}
+
+#menuD {
+    right: -$largeurMenu;
+    -webkit-transition: right 300ms linear 0s; /* For Safari 3.1 to 6.0 */
+    transition: right 300ms linear 0s;
 }
