--- a/Runbelievable/www/css/style.css
+++ b/Runbelievable/www/css/style.css
@@ -1,131 +1,7 @@
 
 /*----------------------------------*\
-                $INTERFACE
+                Connexion
 \*----------------------------------*/
-
-.header {
-    position: absolute;
-    top: 0; left: 0;right: 0;
-    height: 60px; line-height: 60px;
-    color: #FFF;
-    text-transform: uppercase;
-    background-color: #222;
-    padding: 0px 20px;
-}
-
-#connexion_profil {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    background: rgba(22, 22, 22, .95);
-    z-index: 10;
-    right: 0px;
-    bottom: 0px;
-    color: white;
-    text-align: center;
-    display: none;
-}
-
-#connexion_profil input {
-    width: 90%;
-    margin: 10px auto;
-}
-
-#connexion_profil .close {
-    margin: 5px;
-    color: white;
-    opacity: 0.5;
-}
-
-#connexion_profil .close:hover {
-    opacity: 0.9;
-}
-
-#icone_gps {
-    position: absolute;
-    top: 0px;
-    font-size: 20px;
-    right: 10px;
-}
-
-.view {
-    position:absolute;
-    top: 60px; right: 0;
-    bottom: 60px; left: 0;
-}
-
-.nav {
-    position: absolute;
-    bottom: 0;left: 0;right: 0;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-    background-color: #4f597b;
-}
-
-.nav a {
-    display: block;
-    width: 49%;
-    height: 60px;
-    line-height: 60px;
-    float: left;
-    color: white;
-    font-size: 30px;
-}
-
-.nav a:hover, .nav a:focus {
-    color: white;
-}
-
-.nav a:first-child {
-    border-right: 1px solid #1f253d;
-}
-
-.nav .active {
-    border-top: 3px solid #11a7ab;
-}
-
-.panel {
-    position: absolute;
-    top: 0;left: 0;right: 0;bottom: 0;
-    overflow-x: hidden;
-    overflow-y:scroll;
-}
-
-.panel-padding {
-    padding: 0 25px;
-}
-
-/*----------------------------------*\
-    Module Alerte
-\*----------------------------------*/
-
-#module_alerte {
-    position: absolute;
-    z-index: 100;
-    display: none;
-    border-radius: 0px;
-    width: 100%;
-}
-
-/*----------------------------------*\
-    Module Google Map
-\*----------------------------------*/
-html, body, #map
-{
-    height: 90%;
-}
-#map
-{
-    width: 100%;
-}
-
-/*----------------------------------*\
-    Graphique de statistiques
-\*----------------------------------*/
-.chartWrapper {
-    /*width:280px;
-    height: 230px;*/
-    margin: 15px auto 10px;
-    text-align: center;
+#logo_connexion {
+	padding-left: 20px
 }
