--- a/Runbelievable/www/partials/statistiquesSession.html
+++ b/Runbelievable/www/partials/statistiquesSession.html
@@ -3,11 +3,11 @@
     <!--<center><a class="btn btn-primary btn-sm" ng-click="lissageSession()">Calculer les stats</a></center>-->
     <h3 align="center">Statistiques de votre session</h3>
 
-    <b>Distance totale</b> : {{session.distanceParcouru| number : 2}} km<br>
-    <b>Durée de la session</b> : {{ session.dureeSessionString}}<br>
-    <b>Vitesse moyenne</b> : {{session.vitesseMoyenne| number : 2}} km/h<br>
-    <b>Vitesse minimale</b> : {{session.vitesseMin| number : 2}} km/h<br>
-    <b>Vitesse maximale</b> : {{session.vitesseMax| number : 2}} km/h<br><br>
+    <b>Distance totale</b> : {{sessionAfficheeStatistiques.distanceParcouru| number : 2}} km<br>
+    <b>Durée de la session</b> : {{ sessionAfficheeStatistiques.dureeSessionString}}<br>
+    <b>Vitesse moyenne</b> : {{sessionAfficheeStatistiques.vitesseMoyenne| number : 2}} km/h<br>
+    <b>Vitesse minimale</b> : {{sessionAfficheeStatistiques.vitesseMin| number : 2}} km/h<br>
+    <b>Vitesse maximale</b> : {{sessionAfficheeStatistiques.vitesseMax| number : 2}} km/h<br><br>
 
 
     <!-- Div contenant le graphique -->
