--- a/Runbelievable/www/partials/sessionEnCours.html
+++ b/Runbelievable/www/partials/sessionEnCours.html
@@ -12,7 +12,7 @@
              <td>Calorie : {{session.calorie | number : 0}} cal</td>
          </tr>
          <tr>
-             <td>Vitesse actuelle : {{vitesseActuelle | number : 0}} km</td>
+             <td> Vitesse actuelle : <div id="vitesseActuelle"></div> km/h</td>
          </tr>
      </tbody>
     </table>
