Re-factoring pour un code plus cohérent. #58

--- a/Runbelievable/www/scss/style2.scss
+++ b/Runbelievable/www/scss/style2.scss
@@ -2,6 +2,7 @@
 $largeurMenu: 270px;
 
 body {
+    background: white;
     font-family: 'Open Sans', sans-serif !important;
     color: #666;
     a {
