--- a/Runbelievable/www/partials/statistiquesSession.html
+++ b/Runbelievable/www/partials/statistiquesSession.html
@@ -10,11 +10,12 @@
     <b>Vitesse maximale</b> : {{infoApplication.sessionAfficheeStatistiques.vitesseMax| number : 2}} km/h<br><br>
 
 
-    <!-- Div contenant le graphique -->
+     <!-- Div contenant le graphique -->
     <center><b>Vitesse au cours du temps : </b></center>
     <div align="center" id="VitesseTemps" class="chartWrapper"></div>
-    <input type="text" class="form-control" id="nomSession" placeholder="Nom de la session ..." ng-model="session.nom">
+    
+    <!--<input type="text" class="form-control" id="nomSession" placeholder="Nom de la session ..." ng-model="session.nom">
     <br/>
-    <a class="btn btn-primary btn-sm" ng-click="sauvegarderSession()" ng-show="true">Sauvegarder la session</a>
+    <a class="btn btn-primary btn-sm" ng-click="sauvegarderSession()" ng-show="true">Sauvegarder la session</a>-->
 
 </section>
