Fin du CSS de la liste des sessions
#35

--- a/Runbelievable/www/css/style.css
+++ b/Runbelievable/www/css/style.css
@@ -1,7 +1,30 @@
 
 /*----------------------------------*\
-                Connexion
+             Connexion
 \*----------------------------------*/
 #logo_connexion {
 	padding-left: 20px
+}
+
+/*----------------------------------*\
+            Liste sesions
+\*----------------------------------*/
+#listeSessions {
+	width : 100%;
+	margin-left:0;
+padding-left:0;
+}
+
+
+#listeSessions li {
+	list-style-type: none;
+	padding-bottom: 8px;
+}
+
+#listeSessions li a {
+	width : 100%;
+}
+
+#listeSessions li a button{
+	width : 100%;
 }
