--- a/Runbelievable/www/partials/listeSessions.html
+++ b/Runbelievable/www/partials/listeSessions.html
@@ -1,10 +1,10 @@
 <section ng-controller="ListeSessionsController">
     <h3 align="center">Mes session</h3>
-
-	<ul>
+	<br>
+	<ul id="listeSessions">
 		<!-- Affichage de la liste des sessions de l'utilisateur -->
-		<li ng-repeat="session in listeSession">
-			<a ng-click="afficherSession($index);">{{session.nom}}</a>
+		<li ng-repeat="session in listeSession" >
+			<a ng-click="afficherSession($index);" ><button type="button" class="btn btn-default">{{session.date | date:'dd/MM'}} - {{session.nom}} - {{session.dureeSessionString}}</button></a>
 		</li>
 	</ul>
 </section>
