--- a/Runbelievable/www/partials/sessionEnCours.html
+++ b/Runbelievable/www/partials/sessionEnCours.html
@@ -23,4 +23,8 @@
 
     <a ng-click="clickAcquisition()" ng-show="gestionnaires.gps.actif"><button type="button" class="btn btn-default">{{texte_bouton_acquisition}}</button> </a>
     <button type="button" class="btn btn-default">Arreter</button>
+    <br><br>
+    <!-- Placer l'input et le sauvegarder dans une modale quand on arrete la session ? -->
+    <input type="text" class="form-control" placeholder="Nom de la session ..." ng-model="session.nom">
+    <a ng-click="sauvegarderSession()"><button type="button" class="btn btn-default">Sauvegarder</button></a>
 </section>
